src/objects/Claim_Items__c.object
<CustomObject>
    <fields>
        <fullName>Amount_in_Claim_Currency__c</fullName>
        <inlineHelpText>Amount to be reimbursed in INR</inlineHelpText>
        <label>Amount in Claim Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claim Items</relationshipLabel>
        <relationshipName>Claim_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate1__c</fullName>
        <formula>if(Expense_Amount__c  &gt; Amount_in_Claim_Currency__c,Expense_Amount__c  /  Amount_in_Claim_Currency__c ,Amount_in_Claim_Currency__c / Expense_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenseDate__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <inlineHelpText>Amount paid in the Expense Currency</inlineHelpText>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Currency__c</fullName>
        <label>Expense Currency</label>
        <picklist>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/ Commute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Claim Items</relationshipLabel>
        <relationshipName>Claim_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim Items</label>
    <nameField>
        <label>Claim Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>